src/objects/Marketing_Material__c.object
<CustomObject>
    <description>PRM Portal materials for channel partners</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to determine if the record should show up in the Portal</description>
        <inlineHelpText>Flag to determine if the record should show up in the Portal</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Mainly used for Logos, what is the size of the image</description>
        <inlineHelpText>Mainly used for Logos, what is the size of the image</inlineHelpText>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <description>The actual HTML or other code you are providing to the user</description>
        <inlineHelpText>The actual HTML or other code you are providing to the user</inlineHelpText>
        <label>Source Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_URL__c</fullName>
        <label>Target URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Text_Version__c</fullName>
        <description>Any ASCII/Text version of the Source Code if needed</description>
        <inlineHelpText>Any ASCII/Text version of the Source Code if needed</inlineHelpText>
        <label>Text Version</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tell a Friend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_Order__c</fullName>
        <description>If you want this record to show at the top or bottom or in a specific order add a number here</description>
        <inlineHelpText>If you want this record to show at the top or bottom or in a specific order add a number here</inlineHelpText>
        <label>View Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Material</label>
    <nameField>
        <displayFormat>MM-{0}</displayFormat>
        <label>Marketing Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>